# staccato

./: .gitreview  HACKING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py  tox.ini
doc/source/: api.rst  architecture.rst  executor_consitency.rst  index.rst  need.rst  quickstart.rst
etc/: staccato-api-paste.ini  staccato-api.conf  staccato-protocols.json
nova_plugin/: README.rst  requirements.txt  setup.cfg  setup.py
nova_plugin/staccato_nova_download/: __init__.py
nova_plugin/staccato_nova_download/tests/: __init__.py  base.py
nova_plugin/staccato_nova_download/tests/unit/: test_basic.py
staccato/: __init__.py  version.py
staccato/api/: versions.py
staccato/api/v1/: router.py  xfer.py
staccato/cmd/: __init__.py  api.py  manage.py  scheduler.py
staccato/common/: config.py  exceptions.py  state_machine.py  utils.py  wsgi.py
staccato/db/: __init__.py  migration.py  models.py
staccato/db/migrate_repo/: migrate.cfg
staccato/openstack/common/: context.py  exception.py  excutils.py  gettextutils.py  jsonutils.py  log.py  loopingcall.py  network_utils.py  pastedeploy.py  policy.py  processutils.py  service.py  sslutils.py  threadgroup.py  version.py  wsgi.py
staccato/protocols/: interface.py
staccato/protocols/file/: __init__.py
staccato/protocols/http/: __init__.py
staccato/scheduler/: interface.py  simple_thread.py
staccato/tests/: utils.py
staccato/tests/functional/: test_db.py  test_xfer.py
staccato/xfer/: constants.py  events.py  executor.py  interface.py  utils.py
tools/: make_state_machine.sh
(+26 files in other folders)
