[metadata]
name = staccato_nova_download
version = 2013.2
summary = A plugin for nova that will handle image downloads via staccato
description-file = README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = staccato_nova_download

[entry_points]
nova.image.download.modules =
    staccato = staccato_nova_download

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
